[公司形象網站] 動畫效果 => 彈性效果 => 移動底線區塊動畫 => span 藍色底線 => 調整位置

--- a/AI-Excellence-sample/style.css
+++ b/AI-Excellence-sample/style.css
@@ -141,9 +141,13 @@ nav .text-bounce-button-container {
 
 nav .text-bounce-button {
     height: 5px;
-    width: 50px;
+    width: 10%;
     border-radius: 2.5px;
     background: var(--primary-blue);
+
+    position: relative;
+    top:-15%;
+    left: 22%;
 }
 
 nav .nav-centent {
