--- a/AI-Excellence-sample/style.css
+++ b/AI-Excellence-sample/style.css
@@ -148,6 +148,35 @@ nav .text-bounce-button {
     position: relative;
     top:-15%;
     left: 22%;
+
+    animation: text-bounce-button-animation 1s linear;
+}
+
+@keyframes text-bounce-button-animation {
+    20% {
+        width: 5px;
+    }
+    40% {
+        width: 50px;
+    }
+    50% {
+        width: 10px;
+    }
+    60% {
+        width: 50px;
+    }
+    70% {
+        width: 10px;
+    }
+    80% {
+        width: 50px;
+    }
+    90% {
+        width: 40px;
+    }
+    100% {
+        width: 60px;
+    }
 }
 
 nav .nav-centent {
