--- a/web-layout/background-color-transition/gsap-3-part/style.css
+++ b/web-layout/background-color-transition/gsap-3-part/style.css
@@ -8,24 +8,30 @@ section {
     height: 100vh;
     padding: 0 clamp(4rem, 12vw, 20rem);
     display: grid;
-    place-content: center;
+    
+    /* place-content: center; */
 
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
 }    
 
 section p {
     font-size: clamp(2rem, 5vw, 8rem);
 }
 
-section &:nth-of-type(1) {
+section:nth-of-type(1) {
     border-bottom: 1px solid black;
 }
 
-section &:nth-of-type(3) {
+section:nth-of-type(3) {
     background: #ffff00;
 }
 
-section &:nth-of-type(4) {
+section:nth-of-type(4) {
     background: rgb(29, 29, 29);
     color: white;
 }
