--- a/AI-Excellence-sample/style.css
+++ b/AI-Excellence-sample/style.css
@@ -572,6 +572,23 @@ input[type="radio"]:nth-of-type(4):checked ~.slide{
     border-radius: 100px 100px 0 0;
 }
 
+.portfolio-block .text-color-transition {
+    margin-top: 8%;
+
+    font-size: 64px;
+    font-family: "DFPZongYiW9-B5";
+    font-weight: 400;
+    -webkit-text-stroke: 1px var(--light-gray); /* 邊框 */
+    color: var(--primary-white);
+    opacity: 1;
+    z-index: 1;
+}
+
+.portfolio-block p {
+    margin-top: 3%;
+    margin-bottom: 2%;
+}
+
 .computer-background-img {
     width: 690px;    
     height: 450px;       
