--- a/AI-Excellence-sample/style.css
+++ b/AI-Excellence-sample/style.css
@@ -138,10 +138,10 @@ nav .text-bounce-bottom-container {
 
 nav .text-bounce-bottom-box {
     height: 5px;
-    width: 8%;
+    width: 7%;
     position: relative;
     top: -15%;
-    left: 3%;
+    left: 4%;
 
     display: flex;
     flex-direction: column;
@@ -285,6 +285,14 @@ nav .nav-centent .item-list .item img {
     100% {
         width: 0px;
     }
+}
+
+.icon-double-down-arr {
+    position: absolute;
+    left: 50%;
+    bottom: 10%;
+    transition: 2s;
+    cursor: pointer; /* 滑鼠游標 */
 }
 /* 網頁標頭 過場動畫 end */
 
